# dwprontocardio

./: Dockerfile  README.md  alembic.ini  docker-compose.override.yml  models.py  pyproject.toml  requirements.txt
.dlt/: config.toml
dags/: DAG_notas.py  DAG_repasse.py  extracao_suprimentos_MV.py
dags/raw_mv/modelos/: atendime.sql  ati_med.sql  convenio.sql  ent_pro.sql  especie.sql  est_pro.sql  estoque.sql  fornecedor.sql  gru_fat.sql  gru_pro.sql  it_repasse.sql  it_repasse_sih.sql  itent_pro.sql  itmvto_estoque.sql  itord_pro.sql  itreg_amb.sql  itreg_fat.sql  itsol_com.sql  (+16 more)
dbt_dw_repasse/: .user.yml  dbt_project.yml
dbt_prontocardio/: dbt_project.yml  profiles.yml
dbt_prontocardio/snapshots/: snp_ord_com.sql
dbt_suprimentos/: dbt_project.yml
dbt_suprimentos/snapshots/: schema.yml  snp_sol_com.sql
include/: constants.py  profiles.py
migrations/: env.py
migrations/versions/: 03f4a8600026_inclusao_dos_campos_reg_amb_e_reg_fat.py  14b7199ad82e_inclusao_do_campo_tp_atendimento_da_tb_.py  16ab36c6fe0a_inclusao_do_campo_dt_prev_entrega.py  2a9fd0e7d055_inclusao_campo_cd_prestador_na_tabela_.py  3e27ebf33b58_atualizacao_dos_modelos_est_pro_e_.py  4e8ab80fb67c_inclusao_da_tabela_repasse_consolidado.py  58e057ca252b_criando_shcema_raw_mv.py  67783182a321_criando_tabelas_do_schema_raw_mv.py  a46b6f2040af_inclusão_da_tabela_procedimento_sus_e_.py  deb1a7e654e0_inclusão_da_tabela_repasse_prestador_no_.py  edaabd0bb8ee_build_modelo_repasse_medico.py  fc18a2c7e992_inclusao_valor_total_sus.py
models/staging/: schema.yml
script_ingestao/: source_ingestao.py
(+113 files in other folders)
